# rinking-epp

./: .coverage  .gitignore  .markdown-link-check.json  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  README.md  coverage.json
.github/: dependabot.yml
.github/workflows/: backend.yml  docs.yml  frontend.yml
docs/: api_endpoints.md  authentication.md  backend-todo.md  db.dbml  raspberry-pi-hosting.md  ui_pages.md
fastapi/: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-bake.hcl  docker-compose.yml  pyproject.toml
fastapi/app/: __init__.py  main.py  settings.py
fastapi/app/api/: api.py
fastapi/app/api/endpoints/: items.py  lists.py  users.py
fastapi/app/core/: algorithm.py  auth.py  constants.py  fractional_index.py  security.py
fastapi/app/crud/: __init__.py  comparison.py  crud_user.py  item.py  list.py
fastapi/app/db/: database.py  models.py
fastapi/app/schemas/: item.py  list.py  user.py
fastapi/app/services/: __init__.py  comparison_service.py  list_service.py  ranking.py
fastapi/app/utils/: algorithm.py  helper.py
fastapi/scripts/: seed.py
fastapi/tests/: conftest.py  test_crud.py  test_items.py  test_list_service.py  test_lists.py  test_services.py  test_users.py
fastapi/tests/app/utils/: test_algorithm.py
frontend/: App.tsx  README.md  app.json  check-errors.sh  eslint.config.js  metro.config.js  package-lock.json  package.json
frontend/ios/: Podfile
frontend/ios/TierNerd/: Info.plist  SplashScreen.storyboard
frontend/ios/TierNerd.xcodeproj/: project.pbxproj
frontend/ios/TierNerd.xcodeproj/xcshareddata/xcschemes/: TierNerd.xcscheme
frontend/ios/TierNerd.xcworkspace/: contents.xcworkspacedata
frontend/ios/TierNerd/Images.xcassets/SplashScreenBackground.colorset/: Contents.json
frontend/src/components/: AddItemModal.tsx  CreateListModal.tsx  TierDistributionBar.tsx
frontend/src/config/: api.ts
frontend/src/design-system/components/: BaseModalContent.tsx  Button.tsx  Card.tsx  FAB.tsx  Input.tsx  index.ts
frontend/src/design-system/tokens/: borders.ts  colors.ts  index.ts  shadows.ts  spacing.ts  typography.ts
frontend/src/navigation/: AppNavigator.tsx
frontend/src/providers/: AuthContext.tsx
frontend/src/screens/: HomeScreen.tsx  ListDetailScreen.tsx  ListsScreen.tsx  LoginScreen.tsx  ProfileScreen.tsx  RegisterScreen.tsx
frontend/src/services/: api.ts  authService.ts  itemsService.ts  listsService.ts
ui/: .env.example  README.md  pubspec.yaml
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: README.md  main.dart
ui/lib/constants/: auth_constants.dart
ui/lib/design_system/: design_system.dart
ui/lib/design_system/components/: buttons.dart  cards.dart  components.dart  inputs.dart
ui/lib/design_system/theme/: app_theme.dart
ui/lib/design_system/tokens/: animations.dart  borders.dart  colors.dart  shadows.dart  spacing.dart  tokens.dart  typography.dart
ui/lib/models/: list_model.dart
ui/lib/providers/: README.md  auth_provider.dart  counter_provider.dart  list_provider.dart
ui/lib/screens/: design_system_demo.dart  home_screen.dart  home_screen_updated.dart  lists_screen.dart  login_screen.dart  login_screen_logo_options.dart  login_screen_updated.dart  logo_options_demo.dart
ui/lib/services/: auth_service.dart  list_service.dart  mock_list_service.dart  service_factory.dart
ui/lib/utils/: app_theme.dart  responsive_helper.dart
ui/lib/widgets/: dev_menu.dart  google_sign_in_button.dart  list_card.dart  tier_list_preview.dart  tiernerd_logo_text.dart
ui/macos/Runner.xcodeproj/: project.pbxproj
