[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ranking-app"
version = "0.1.0"
description = "A ranking app backend that uses binary comparisons to eliminate rating bias"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<5.1.0",
    "python-multipart>=0.0.6",
    "psycopg[binary,pool]>=3.1.12",
    "asyncpg>=0.28.0",
    "alembic>=1.11.1",
    "email-validator>=2.0.0",
    "greenlet>=2.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "aiosqlite>=0.19.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.0.272",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
